--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.20.0
   firebase_auth: ^3.4.0
+  fluttertoast: ^8.0.9
+  cloud_firestore: ^3.4.0
 
 dev_dependencies:
   flutter_test:
